# Granite-TTM-r2-Battery-Surge

./: NOTICE  README.md  pyproject.toml
.github/workflows/: smoke.yml
docs/: TRAINING.md
eval/configs/: holdout.yaml
eval/reports/: holdout.md  storm_breakdown.json
src/granite_ttm_battery_surge/: __init__.py  data.py  eval.py
