[project]
name = "granite-ttm-battery-surge"
version = "0.1.0"
description = "NYC storm-surge nowcast at NOAA station 8518750. Fine-tune of IBM Granite TimeSeries TTM r2."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Adam Rahman", email = "msrahmanadam@gmail.com" }]
requires-python = ">=3.12,<3.13"

dependencies = [
    "torch>=2.4",
    "granite-tsfm>=0.3",
    "transformers>=4.55,<5",
    "huggingface-hub>=0.34,<1",
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.31",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
ttm-battery-eval = "granite_ttm_battery_surge.eval:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/granite_ttm_battery_surge"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
